# freetoolkit

./: .gitignore  .lighthouserc.json  ANALYSIS.md  BACKLOG.md  CLAUDE.md  HUMAN_INPUTS.md  Makefile  PROJECT_STATE.md  README.md  REVIEW_REPORT.md  all_tools_tmp.txt  backlog.json  covered_counts_tmp.txt  covered_tools_tmp.txt  covered_unique_tmp.txt  existing_urls_raw_tmp.txt  existing_urls_sorted_tmp.txt  existing_urls_tmp.txt  pairs_raw_tmp.txt  pairs_tmp.txt  parents_only_tmp.txt  parents_vals_tmp.txt  project.yaml  pyproject.toml  referenced_clean_sorted_tmp.txt  referenced_links_tmp.txt  slugs_only_tmp.txt  slugs_vals_tmp.txt
.claude/: launch.json
.github/workflows/: ci.yml  uptime.yml
content/: affiliates.yaml  config.yaml  countries.yaml  faqs.yaml  glossary.yaml  intent_pages.yaml  tools.yaml
content/pages/: about.md  compare-stripe-vs-paypal.md  comparisons.md  contact.md  freelance-tools-comparison.md  payment-processor-comparison.md  privacy.md  saas-analytics-comparison.md  stripe-plans-comparison.md  terms.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  GROWTH_PLAN.md  MONETIZATION.md
infra/: Dockerfile  docker-compose.yml  goaccess.conf  nginx.conf
scripts/: analytics_report.sh  check_perf.py  deploy.sh  new_tool.py  uptime_check.sh
src/freetoolkit/: __init__.py  (+1 more)
static/: manifest.json
templates/: 404.html  ads_slot.html  base.html  category.html  changelog.html  dashboard.html  glossary.html  glossary_index.html  index.html  intent_country.html  intent_page.html  page.html  tool.html  tools_index.html
tests/: test_build.py  test_tools.js
(+225 files in other folders)
